# Pac-Man

./: .flake8  .gitignore  Agents.md  Makefile  PACKAGED-INSTRUCTIONS.txt  README.md  build_package.sh  build_release_macos.sh  config.example.json  highscores.json  pac-man.py  packaged_launcher.py  pacman.spec  pyproject.toml  test.py
extras/: LEVEL_PROGRESSION.md  notes.txt
project_management/: README.md  TODO.md
src/pacman/: __init__.py  app.py  config.py  constants.py  entities.py  game_view.py  highscore.py  maze_display.py  movement.py  spawn_layout.py  types.py  utils.py  window.py
src/pacman/core/: __init__.py  config.py  constants.py  utils.py
src/pacman/entities/: __init__.py  animation.py  entity.py  ghost.py  maze_movement.py  pacgum.py  pacman.py  super_pacgum.py
src/pacman/game/: __init__.py  game_view.py  state.py
src/pacman/input/: __init__.py  movement.py
src/pacman/maze/: __init__.py  maze_display.py  spawn_layout.py
src/pacman/rendering/: __init__.py  window.py
src/pacman/ui/: end_screen.py  game_over_screen.py  main_menu.py  pause_menu.py  victory_screen.py
tests/: test_config.py  test_game_state.py  test_highscore.py  test_pacman.py  test_window.py
