[project]
name = "pacman"
version = "0.1.0"
description = "Skeleton Pac-Man project following 42 guidelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
    "mazegenerator",
]

[project.scripts]
pacman = "pacman.app:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = "(^\\.venv/|^build/|^dist/)"

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-00001-py3-none-any.whl" }
